[gd_scene load_steps=4 format=2]

[ext_resource path="res://IMC.gd" type="Script" id=1]
[ext_resource path="res://Navegacao.tscn" type="PackedScene" id=2]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 4, 46 )
script = ExtResource( 1 )

[node name="labelEnunciado" type="Label" parent="."]
margin_left = 254.0
margin_top = -29.0
margin_right = 442.0
margin_bottom = -5.0
size_flags_stretch_ratio = 10.0
text = "ÍNDICE DE MASSA CORPORAL"
valign = 1

[node name="Iniciar" type="Button" parent="."]
margin_left = 260.0
margin_top = 154.0
margin_right = 690.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( -462, -160 )
text = "CALCULAR IMC"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 252.0
margin_top = 8.0
margin_right = 686.0
margin_bottom = 146.0
color = Color( 0.0470588, 0.0156863, 0.0509804, 1 )

[node name="Saida" type="Label" parent="."]
margin_left = 260.0
margin_top = 18.0
margin_right = 676.0
margin_bottom = 138.0
hint_tooltip = "SAÍDA"
custom_fonts/font = ExtResource( 3 )
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="Node2D" parent="." instance=ExtResource( 2 )]
position = Vector2( -9, -42 )

[node name="Peso" type="Label" parent="."]
margin_left = 20.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 23.0
size_flags_stretch_ratio = 10.0
text = "PESO"
valign = 1

[node name="RecebePeso" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 18.0
margin_right = 78.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( -317, 24 )

[node name="Altura" type="Label" parent="."]
margin_left = 20.0
margin_top = 66.0
margin_right = 70.0
margin_bottom = 82.0
size_flags_stretch_ratio = 10.0
text = "ALTURA"
valign = 1

[node name="RecebeAltura" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 82.0
margin_right = 78.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( -317, 24 )

[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
